# FaithEcho

./: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pytest.ini  .secrets.baseline  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SPECIFICATION.md  TODO.md  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  release-please-config.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  language-services.yaml  release.yml
edge/hls_packager/: Dockerfile
edge/pipeline_worker/: Dockerfile
scripts/: dev-proxy.sh  dev_setup.sh
services/: utils.py
services/stt/: Dockerfile  main.py
services/translate/: Dockerfile  main.py
services/tts/: Dockerfile  main.py
src/faith_echo/: __init__.py  segment_manager.py
src/faith_echo/proto/: __init__.py  language_service.proto  language_service_pb2.py
src/faith_echo/sdk/: __init__.py  jitter_buffer.py  models.py  stt_client.py  translate_client.py  tts_client.py  tts_receiver.py
tests/: AGENTS.md  conftest.py  test_dev_environment.py  test_proto_schema.py  test_sdk_clients.py  test_service_contract_pact.py  test_service_logic.py  test_services_health.py  test_stt_service_integration.py  test_stt_service_stream.py  test_translate_service_stream.py  test_tts_service_stream.py
tests/contracts/: test_pact.py  test_proto_schema.py
tests/e2e/: conftest.py  test_complete_stt_translate_tts_pipeline.py  test_stt_step.py  test_translate_step.py  test_tts_step.py
tests/integration/: test_devenvironment.py  test_sdk_clients.py  test_stt_integration.py  test_stt_stream.py  test_translate_stream.py  test_tts_stream.py
tests/smoke/: test_health.py
tests/stt/: test_logic.py
tests/translate/: test_logic.py
tests/tts/: test_logic.py
tests/unit/: test_jitter_buffer.py  test_segment_manager.py  test_stt_logic.py  test_translate_logic.py  test_tts_logic.py  test_tts_receiver.py
ui/: Dockerfile  index.html
